# Internship_Japan

./: README.md
baxter_sim_controllers/: CMakeLists.txt
dual_arm_pa10_control/: CMakeLists.txt  package.xml
dual_arm_pa10_control/config/: left_arm_control.yaml  left_arm_gripper.yaml  right_arm_control.yaml  right_arm_hand_control.yaml
dual_arm_pa10_control/launch/: dual_arm_control.launch  left_arm_control.launch  right_arm_control.launch
dual_arm_pa10_control/src/: gripper_control.cpp
dual_arm_pa10_description/: CMakeLists.txt  manifest.xml  package.xml
dual_arm_pa10_description/launch/: display.launch  gazebo.launch
dual_arm_pa10_description/meshes/: gripper_f.STL  left_arm_link1.STL  left_arm_link2.STL  left_arm_link3.STL  left_arm_link4.STL  left_arm_link5.STL  left_arm_link6.STL  right_arm_base_hand.STL  right_arm_finger1_link1.STL  right_arm_finger1_link2.STL  right_arm_finger1_link3.STL  right_arm_finger2_link1.STL  (+12 more)
dual_arm_pa10_gazebo/: CMakeLists.txt  package.xml
dual_arm_pa10_move_arms/: CMakeLists.txt  package.xml
dual_arm_pa10_moveit/: .setup_assistant  CMakeLists.txt  package.xml
force_sensor/: CMakeLists.txt  package.xml
force_sensor/msg/: Wrench_list.msg
force_sensor/src/: ContactPlugin.cpp  ContactPlugin.hh
hand_moveit/: .setup_assistant  package.xml
pa10/: CMakeLists.txt  package.xml
pa10_control/: CMakeLists.txt  package.xml
pa10_description/: CMakeLists.txt  package.xml
pa10_gazebo/: CMakeLists.txt  package.xml
pa10_move_arm/: CMakeLists.txt  package.xml
pa10_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+140 files in other folders)
